syntax = "proto3";
option java_package = "cool.houge.grpc";
option java_multiple_files = true;

import "cool/houge/grpc/auth.proto";
import "cool/houge/grpc/msg.proto";
import "cool/houge/protos/msg_enums.proto";

message ListGidsRequest {
  int32 uid = 1;
}

message ListGidsResponse {
  repeated int32 gids = 1;
}

message AttachRequest {
  string id = 1;
}

message AttachResponse {

  message SubUnsubCommand {
    int32 uid = 1;
    repeated int32 gids = 2;
    // 值为 true 时解除用户与群组的订阅关系
    bool unsub = 9;
  }

  message Command {
    oneof kind {
      SubUnsubCommand sub_unsub = 1;
    }
  }

  message Msg {
    // 消息类型
    MsgKind kind = 1;
    // 消息发送者
    fixed32 from = 2;
    // 消息接收者
    fixed32 to = 3;
    // 消息内容
    string content = 4;
    // 消息内容类型
    MsgContentType content_type = 5;
    // 扩展参数会原样转发给客户端
    string extra = 9;
  }

  oneof kind {
    Msg msg = 1;
    Command command = 9;
  }
}

service Hybrid {

  //
  rpc Auth(AuthRequest) returns(AuthResponse) {}

  //
  rpc ListGids(ListGidsRequest) returns(ListGidsResponse) {}

  //
  rpc SendToUser(SendMsgRequest) returns(SendMsgResponse) {}

  //
  rpc SendToGroup(SendMsgRequest) returns(SendMsgResponse) {}

  //
  rpc Attach(AttachRequest) returns(AttachResponse) {}
}
