//
// Copyright 2019-2021 the original author or authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";
option java_package = "cool.houge.grpc";
option java_multiple_files = true;

import "cool/houge/protos/msg_enums.proto";

message CreateMsgIdRequest {
}

message CreateMsgIdResponse {
  string msg_id = 1;
}

message CreateMsgIdsRequest {
  int32 count = 1;
}

message CreateMsgIdsResponse {
  repeated string msg_id = 1;
}

message SendMsgRequest {
  // 消息ID
  string msg_id = 1;
  // 消息发送者
  fixed32 from = 2;
  // 消息接收者
  fixed32 to = 3;
  // 消息内容
  string content = 4;
  // 消息内容类型
  MsgContentType content_type = 5;
  // 扩展参数会原样转发给客户端
  string extra = 9;
}

message SendMsgResponse {
  // 消息 ID
  string msg_id = 1;
}

// 消息服务
service Msg {

  rpc CreateId(CreateMsgIdRequest) returns(CreateMsgIdResponse) {}

  rpc CreateIds(CreateMsgIdsRequest) returns(CreateMsgIdsResponse) {}

  rpc SendToUser(SendMsgRequest) returns(SendMsgResponse) {}

  rpc SendToGroup(SendMsgRequest) returns(SendMsgResponse) {}
}
